--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
     "ethers": "^5.7.2"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
-    "@openzeppelin/contracts": "^4.8.3",
+    "@chainlink/contracts": "^0.5.1",
+    "@nomicfoundation/hardhat-toolbox": "^1.0.2",
+    "@openzeppelin/contracts": "^4.8.0",
     "@pancakeswap/v3-core": "^1.0.2",
     "@pancakeswap/v3-periphery": "^1.0.2",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
@@ -13,7 +14,7 @@
     "@uniswap/v3-periphery": "^1.4.3",
     "hardhat": "^2.13.0",
     "hardhat-contract-sizer": "^2.8.0",
-    "hardhat-gas-reporter": "^1.0.9",
-    "solidity-coverage": "^0.8.2"
+    "hardhat-gas-reporter": "^1.0.2",
+    "solidity-coverage": "^0.7.22"
   }
 }
